manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g1-smart-glasses-db-dep
  namespace: toska-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: g1-smart-glasses-db
  template:
    metadata:
      labels:
        app: g1-smart-glasses-db
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "100m"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: g1-smart-glasses-claim
