manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"g1-smart-glasses-backend-is:staging","namespace":"ohtuprojekti-staging"},"fieldPath":"spec.template.spec.containers[?(@.name==\"g1-smart-glasses-backend\")].image","pause":"false"}]
  name: g1-smart-glasses-backend-dep
  namespace: ohtuprojekti-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: g1-smart-glasses-backend
  template:
    metadata:
      labels:
        app: g1-smart-glasses-backend
    spec:
      containers:
        - name: g1-smart-glasses-backend
          image: g1-smart-glasses-backend-is:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: gcp-secret
              mountPath: /app/secrets/gcp
              readOnly: true
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "50Mi"
              cpu: "50m"
      volumes:
        - name: gcp-secret
          secret:
            secretName: g1-smart-glasses-gcp-secret
            items:
              - key: sa.json
                path: sa.json
