manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g1-smart-glasses-db-svc
  namespace: ohtuprojekti-staging
spec:
  selector:
    app: g1-smart-glasses-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
